package com.easyhome.common.modules.download.policy;

/**
 * Json格式文件存储策略
 *
 * @author zhoulu
 * @date 2014/5/23
 */
public class JsonFilePolicy extends HibernatePolicy {

	@Override
    public void prepare() {

	}

	@Override
	public void commit() {

	}
}
